[IsolationNodes]: Ensure to generate raster invalidation on effect parent changes.

This patch ensures that when an aliased effect node's parent changes, we
detect that in the EffectPaintPropertyNode::Changed for the purposes
of generating an appropriate raster invalidation.

R=pdr@chromium.org, wangxianzhu@chromium.org

Bug: 916510
Change-Id: Ic46df93218eed21a5e868a22cbe72a7c5763aba7
Reviewed-on: https://chromium-review.googlesource.com/c/1384661
Reviewed-by: Philip Rogers <pdr@chromium.org>
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Commit-Queue: vmpstr <vmpstr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617977}
Former-commit-id: 1504ddd4db783b8ec999cf9b7c36e61c969ede6c